syntax = "proto3";

package cth;

option csharp_namespace = "O24OpenAPI.Grpc.CTH";

import "Common/common.proto";

service CTHGrpcService {
  rpc GetUserSession (GetUserSessionRequest) returns (common.GrpcResponse);
  rpc GetChannelRoles (GetChannelRolesRequest) returns (common.GrpcResponse);
  rpc GetUserPushId (GetUserPushIdRequest) returns (common.GrpcResponse);
  rpc LoadUserCommands (LoadUserCommandsRequest) returns (common.GrpcResponse);
  rpc GetInfoFromFormCode (GetInfoFromFormCodeRequest) returns (common.GrpcResponse);
  rpc GetListRoleByUserCode (GetListRoleByUserCodeRequest) returns (common.GrpcResponse);
  rpc GetInfoFromCommandId (GetInfoFromCommandIdRequest) returns (common.GrpcResponse);
  rpc GetInfoFromParentId (GetInfoFromParentIdRequest) returns (common.GrpcResponse);
  rpc GetUserInfoByUserCode (GetUserInfoByUserCodeRequest) returns (common.GrpcResponse);
  rpc GetUserPushIdByContractNumber(GetUserPushIdByContractNumberRequest) returns (common.GrpcResponse);
  rpc GetUserNotification(GetUserNotificationRequest) returns (stream GetUserNotificationReply);
  rpc LoadFullUserCommands(LoadFullUserCommandRequest) returns (stream UserCommandReply);
}

message GetUserSessionRequest {
  string token = 1;
}

message GetChannelRolesRequest {
  int32 roleId = 1;
}

message GetUserPushIdRequest {
  string userCode = 1;
}

message LoadUserCommandsRequest {
  string applicationCode = 1;
  string roleCommand = 2;
}

message GetInfoFromFormCodeRequest {
  string applicationCode = 1;
  string formCode = 2;
}

message GetListRoleByUserCodeRequest {
  string userCode = 1;
}

message GetInfoFromCommandIdRequest {
  string applicationCode = 1;
  string commandId = 2;
}

message GetInfoFromParentIdRequest {
  string applicationCode = 1;
  string parentId = 2;
}
message GetUserInfoByUserCodeRequest {
  string userCode = 1;
}
message GetUserPushIdByContractNumberRequest {
  string contractNumber = 1;
}
message GetUserNotificationRequest {}

message GetUserNotificationReply {
  string push_id = 1;
  string user_code = 2;  
  string phone_number = 3;
  string user_device = 4;
}
message LoadFullUserCommandRequest {}
message UserCommandReply {
  string application_code = 1;
  string command_id = 2;
  string parent_id = 3;
  string command_name = 4;
  string command_name_language = 5;
  string command_type = 6;
  string command_uri = 7;
  bool enabled = 8;
  bool is_visible= 9;
  int32 display_order = 10;
  string group_menu_icon = 11;
  string group_menu_visibale = 12;
  string group_menu_authorize_form = 13;
}
