syntax = "proto3";

package pmt;

option csharp_namespace = "O24OpenAPI.Grpc.PMT";

import "Common/common.proto";

// PMT gRPC service
service PMTGrpcService {
  rpc VNPayProcessPay (VNPayProcessPayRequest) returns (common.GrpcResponse);
  rpc VNPayProcessReturn (VNPayProcessReturnRequest) returns (common.GrpcResponse);
}


message VNPayProcessPayRequest {
	string amount = 1;
	string transactiondescription = 2;
	string languagecode = 3;
	string vnpaytransactiondate = 4;
}
message VNPayProcessReturnRequest {
	string rawquery = 1;
}